# shekel

./: .codecov.yml  .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_SUMMARY.md  GITHUB_PAGES_SETUP.md  GOOGLE_SEARCH_CONSOLE_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  SEO_IMPLEMENTATION.md  ai-metadata.json  index.html  mkdocs-ci.yml  mkdocs.yml  pyproject.toml  sitemap.xml  versions.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml
0.2.8/: 404.html  index.html  sitemap.xml
0.2.8/api-reference/: index.html
0.2.8/changelog/: index.html
0.2.8/ci-and-branch-protection/: index.html
0.2.8/cli/: index.html
0.2.8/contributing/: index.html
0.2.8/extending/: index.html
0.2.8/how-it-works/: index.html
0.2.8/installation/: index.html
0.2.8/models/: index.html
0.2.8/quickstart/: index.html
0.2.8/search/: search_index.json
0.2.9/: 404.html  index.html  sitemap.xml
0.2.9/api-reference/: index.html
0.2.9/architecture/: index.html
0.2.9/changelog/: index.html
0.2.9/ci-and-branch-protection/: index.html
0.2.9/cli/: index.html
0.2.9/contributing/: index.html
0.2.9/docker/: index.html
0.2.9/extending/: index.html
0.2.9/how-it-works/: index.html
0.2.9/installation/: index.html
0.2.9/models/: index.html
0.2.9/quickstart/: index.html
0.2.9/search/: search_index.json
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/api-reference/: index.html
1.0.1/architecture/: index.html
1.0.1/changelog/: index.html
1.0.1/ci-and-branch-protection/: index.html
1.0.1/cli/: index.html
1.0.1/contributing/: index.html
1.0.1/docker/: index.html
1.0.1/extending/: index.html
1.0.1/how-it-works/: index.html
1.0.1/installation/: index.html
1.0.1/models/: index.html
1.0.1/quickstart/: index.html
1.0.1/search/: search_index.json
1.0.2/: 404.html  index.html  sitemap.xml
1.0.2/api-reference/: index.html
1.0.2/architecture/: index.html
1.0.2/changelog/: index.html
1.0.2/ci-and-branch-protection/: index.html
1.0.2/cli/: index.html
1.0.2/contributing/: index.html
1.0.2/docker/: index.html
1.0.2/extending/: index.html
1.0.2/how-it-works/: index.html
1.0.2/installation/: index.html
1.0.2/models/: index.html
1.0.2/quickstart/: index.html
1.0.2/search/: search_index.json
1.1.0/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml  tags.json
1.1.0/api-reference/: index.html  index.md
1.1.0/architecture/: index.html
1.1.0/changelog/: index.html
1.1.0/ci-and-branch-protection/: index.html
1.1.0/cli/: index.html  index.md
1.1.0/contributing/: index.html
1.1.0/docker/: index.html  index.md
1.1.0/extending/: index.html
1.1.0/how-it-works/: index.html  index.md
1.1.0/installation/: index.html  index.md
1.1.0/models/: index.html  index.md
1.1.0/overrides/: main.html
1.1.0/quickstart/: index.html  index.md
1.1.0/tags/: index.html
1.2.0/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  index.md  llms-full.txt  llms.txt  robots.txt  sitemap.xml  tags.json
api-reference/: index.html
changelog/: index.html
ci-and-branch-protection/: index.html
cli/: index.html
contributing/: index.html
design-deleteme/: distributed-budgets.md
docs/: BingVerify.xml  api-reference.md  changelog.md  ci-and-branch-protection.md  cli.md  contributing.md  docker.md  extending.md  how-it-works.md  implementation-plan-providers-detailed.md  index.md  installation.md  models.md  quickstart.md  tags.md
examples/: anthropic_basic.py  async_demo.py  autogen_demo.py  cohere_adapter_template.py  crewai_demo.py  distributed_budgets_demo.py  gemini_demo.py  huggingface_demo.py  langchain_demo.py  langgraph_demo.py  litellm_basic.py  loop_guard_demo.py  nested_content_pipeline.py  nested_research_agent.py  openai_agents_demo.py  openai_basic.py  session_budget_demo.py  spend_velocity_demo.py  temporal_api_gateway.py  temporal_budget_demo.py  tool_budget_demo.py
extending/: index.html
how-it-works/: index.html
installation/: index.html
langfuse-integration/: index.html
models/: index.html
overrides/: main.html
planning-1.1.0/: implementation-plan.md  prd-loop-guard.md  prd-openai-agents-sdk.md  prd-spend-velocity.md  tech-design-loop-guard.md  tech-design-openai-agents-sdk.md  tech-design-spend-velocity.md
quickstart/: index.html
search/: search_index.json
shekel/: __init__.py  _budget.py  _budget.py,cover  _cli.py  _context.py  _decorator.py  _patch.py  _pricing.py  _run_config.py  _run_utils.py  _runtime.py  _temporal.py  _tool.py  exceptions.py  otel.py  prices.json
tests/: conftest.py  test_anthropic_wrappers.py  test_budget.py  test_budget_async.py  test_budget_sync.py  test_budget_warn_only.py  test_call_limits.py  test_cli.py  test_cli_run.py  test_cli_run_config.py  test_cli_run_output.py  test_concurrent.py  test_coverage_gaps.py  test_crewai_wrappers.py  test_decorator.py  test_distributed_budgets.py  test_exceptions.py  test_fallback.py  test_gemini_wrappers.py  test_huggingface_wrappers.py  test_kubernetes_integration.py  test_langchain_wrappers.py  test_langgraph_wrappers.py  test_litellm_wrappers.py  test_loop_guard.py  test_nested_absolute_limits.py  test_nested_accumulation.py  test_nested_auto_capping.py  test_nested_budget_validation.py  test_nested_introspection.py  test_nested_on_exit_propagation.py  test_nested_parent_locking.py  test_nested_required_names.py  test_nested_safety_rails.py  test_nested_tree.py  test_nested_unique_sibling_names.py  test_openai_agents_wrappers.py  test_openai_wrappers.py  test_otel_metrics.py  test_patch_coverage.py  (+10 more)
tmp/: implementation-plan-providers-detailed.md
tmp-h-design/: PRD-hierarchical-integration.md  design-hierarchical-integration.md  implementation-plan.md
(+353 files in other folders)
