[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shekel"
version = "0.2.6"
description = "LLM budget enforcement and cost tracking. Zero config — with budget(max_usd=1.00): run_agent(). Works with LangGraph, CrewAI, raw OpenAI/Anthropic/Gemini."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Arie Radle", email = "arie.radle@gmail.com" }]
requires-python = ">=3.9"
keywords = [
    "llm",
    "llmops",
    "ai-agents",
    "agentic-ai",
    "openai",
    "anthropic",
    "langchain",
    "langgraph",
    "langfuse",
    "gemini",
    "google-genai",
    "huggingface",
    "huggingface-hub",
    "litellm",
    "groq",
    "llm-cost-control",
    "llm-budget-control",
    "ai-cost-control",
    "token-budget",
    "prompt-budget",
    "budget enforcement",
    "cost tracking",
    "spend governance",
    "usage limits",
    "quotas",
    "guardrails",
    "ai-governance",
    "llm fallback",
    "model fallback",
    "crewai",
    "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Topic :: Office/Business :: Financial",
    "Environment :: Console",
    "Typing :: Typed",
]
# Zero hard dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.7.0"]
langfuse = ["langfuse>=2.0.0"]
litellm = ["litellm>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
huggingface = ["huggingface-hub>=0.20.0"]
otel = ["opentelemetry-api>=1.0.0"]
all = ["openai>=1.0.0", "anthropic>=0.7.0", "langfuse>=2.0.0", "litellm>=1.0.0", "google-genai>=1.0.0", "huggingface-hub>=0.20.0", "opentelemetry-api>=1.0.0"]
all-models = ["openai>=1.0.0", "anthropic>=0.7.0", "langfuse>=2.0.0", "tokencost>=0.1.0"]
cli = ["click>=8.0.0"]
dev = [
    "pytest>=7.0.0",
    "langgraph>=0.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest-cov>=4.0.0",
    "click>=8.0.0",
    "mkdocs-material>=9.0.0",
    "google-genai>=1.0.0",
    "huggingface-hub>=0.20.0",
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
]

[project.scripts]
shekel = "shekel._cli:cli"

[project.urls]
Homepage = "https://github.com/arieradle/shekel"
Repository = "https://github.com/arieradle/shekel"
Documentation = "https://arieradle.github.io/shekel/"
Issues = "https://github.com/arieradle/shekel/issues"
Changelog = "https://github.com/arieradle/shekel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["shekel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--benchmark-skip"
benchmark_min_rounds = 5
benchmark_disable_gc = true
benchmark_warmup = false

[tool.black]
line-length = 100
target-version = ["py39"]
exclude = "examples/"

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["examples/*"]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["/_pytest/"]

[[tool.mypy.overrides]]
module = "tokencost"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langfuse"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "litellm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.genai", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["huggingface_hub", "huggingface_hub.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["_pytest", "_pytest.*"]
follow_imports = "skip"
ignore_errors = true
